# interactive-clustering

./: .copier-answers.yml  .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  duties.py  gen_credits.py  gen_ref_nav.py  index.html  index.md  macros.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini
contributing/: index.html
coverage/: coverage_html.js  covindex.html  d_0199cb44406b0f54___init___py.html  d_0199cb44406b0f54_test_frequency_py.html  d_0199cb44406b0f54_test_preprocessing_py.html  d_0199cb44406b0f54_test_vectorization_py.html  d_369b74fc41a2cca8_abstract_py.html  d_369b74fc41a2cca8_clusters_based_py.html  d_369b74fc41a2cca8_factory_py.html  d_595793af9f1bd600___init___py.html  d_595793af9f1bd600_test_abstract_py.html  d_595793af9f1bd600_test_binary_py.html  d_595793af9f1bd600_test_factory_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_clustering_py.html  d_a44f0ac069e85531_test_constraints_py.html  d_a44f0ac069e85531_test_sampling_py.html  d_a44f0ac069e85531_test_usage_docs_py.html  d_a44f0ac069e85531_test_utils_py.html  d_a8a82bc8b584655b___init___py.html  d_a8a82bc8b584655b_test_abstract_py.html  d_a8a82bc8b584655b_test_affinity_propagation_py.html  d_a8a82bc8b584655b_test_dbscan_py.html  d_a8a82bc8b584655b_test_factory_py.html  d_a8a82bc8b584655b_test_hierarchical_py.html  d_a8a82bc8b584655b_test_kmeans_py.html  d_a8a82bc8b584655b_test_mpckmeans_py.html  d_a8a82bc8b584655b_test_spectral_py.html  d_b0711cfa333aafab___init___py.html  d_b0711cfa333aafab_test_abstract_py.html  d_b0711cfa333aafab_test_cluster_based_py.html  d_b0711cfa333aafab_test_factory_closest_in_different_clusters_py.html  d_b0711cfa333aafab_test_factory_farthest_in_same_cluster_py.html  d_b0711cfa333aafab_test_factory_py.html  d_b0711cfa333aafab_test_factory_random_in_same_cluster_py.html  d_b0711cfa333aafab_test_factory_random_py.html  d_bb424097a6a9801f_frequency_py.html  d_bb424097a6a9801f_preprocessing_py.html  d_bb424097a6a9801f_vectorization_py.html  d_d033c55677eb0514_abstract_py.html  (+73 more)
credits/: index.html
docs/: gen_credits.py  gen_ref_nav.py  license.md  macros.py  usage.md
docs/docs/figures/: README.md
docs/figures/: README.md  index.html
docs/reference/clustering/: abstract.md  factory.md  hierarchical.md  kmeans.md  spectral.md
docs/reference/constraints/: abstract.md  binary.md  factory.md
docs/reference/sampling/: abstract.md  closest_in_different_clusters.md  clusters_based.md  factory.md  farhest_in_same_cluster.md  random.md  random_in_same_cluster.md
docs/reference/utils/: checking.md  frequency.md  graph.md  preprocessing.md  vectorization.md
experiments/: README.md
experiments/comparative_tests/: French_trainset_for_chatbots_dealing_with_usual_requests_on_bank_cards.csv  README.md  dict_of_preprocessed_texts.json  performances.ipynb  plot_graphs.py  utils.py
experiments/comparative_tests/measures_results/: kmeans_c_dbscan_mpckmeans_affinity_size_60.json  mpckmeans_individual_size_60.json
experiments/interactive-visualization/: README.md  visualization_app.py
experiments/interactive-visualization/data/: results_size_60_old.json  vectors_500.pkl  vectors_60.pkl
figures/: figures.pptx  index.html
license/: index.html
reference/SUMMARY/: index.html
reference/clustering/abstract/: index.html
reference/clustering/factory/: index.html
reference/clustering/hierarchical/: index.html
reference/clustering/kmeans/: index.html
reference/clustering/spectral/: index.html
reference/cognitivefactory/interactive_clustering/: index.html
reference/cognitivefactory/interactive_clustering/clustering/: index.html
reference/cognitivefactory/interactive_clustering/constraints/: index.html
reference/cognitivefactory/interactive_clustering/sampling/: index.html
reference/cognitivefactory/interactive_clustering/utils/: index.html
reference/constraints/abstract/: index.html
reference/constraints/binary/: index.html
reference/constraints/factory/: index.html
reference/sampling/abstract/: index.html
reference/sampling/closest_in_different_clusters/: index.html
reference/sampling/clusters_based/: index.html
reference/sampling/factory/: index.html
reference/sampling/farhest_in_same_cluster/: index.html
reference/sampling/random/: index.html
reference/sampling/random_in_same_cluster/: index.html
reference/utils/checking/: index.html
reference/utils/frequency/: index.html
reference/utils/graph/: index.html
reference/utils/preprocessing/: index.html
reference/utils/vectorization/: index.html
scripts/: gen_credits.py  multirun.sh  setup.sh
search/: search_index.json
src/cognitivefactory/interactive_clustering/: __init__.py
src/cognitivefactory/interactive_clustering/clustering/: __init__.py  abstract.py  affinity_propagation.py  dbscan.py  factory.py  hierarchical.py  (+3 more)
tests/: __init__.py  conftest.py  test_clustering.py  test_constraints.py  test_docs.py  test_docs_usage.py  test_sampling.py  test_usage_docs.py  test_utils.py
tests/clustering/: __init__.py  test_abstract.py  test_affinity_propagation.py  test_dbscan.py  test_factory.py  test_hierarchical.py  test_kmeans.py  test_mpckmeans.py  test_spectral.py
tests/constraints/: __init__.py  test_abstract.py  test_binary.py  test_factory.py
tests/sampling/: __init__.py  test_abstract.py  test_closest_in_different_clusters.py  test_cluster_based.py  test_factory.py  test_factory_closest_in_different_clusters.py  test_factory_farthest_in_same_cluster.py  test_factory_random.py  test_factory_random_in_same_cluster.py  test_farhest_in_same_cluster.py  test_random.py  test_random_in_same_cluster.py
tests/temp/: __init__.py
tests/utils/: __init__.py  test_checking.py  test_frequency.py  test_graph.py  test_preprocessing.py  test_vectorization.py
usage/: index.html
(+49 files in other folders)
