[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "cognitivefactory-interactive-clustering"
version = {use_scm = true}
description = "Python package used to apply NLP interactive clustering methods."
authors = [
    {name = "Erwan Schild", email = "erwan.schild@e-i.com"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "python",
    "natural-language-processing",
    "clustering",
    "constraints",
    "constrained-clustering-algorithm",
    "interactive-clustering",
]
dynamic = [
    "version",
    "classifiers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]
dependencies = [
    "networkx>=2.5.0",
    "numpy>=1.19.4",
    "scikit-learn>=0.24.1",
    "scipy>=1.5.3",
    "spacy>=2.3.2, <2.3.6",
]

[project.urls]
Homepage = "https://cognitivefactory.github.io/interactive-clustering"
Documentation = "https://cognitivefactory.github.io/interactive-clustering"
Changelog = "https://cognitivefactory.github.io/interactive-clustering/changelog"
Repository = "https://github.com/cognitivefactory/interactive-clustering"
Issues = "https://github.com/cognitivefactory/interactive-clustering/issues"
Discussions = "https://github.com/cognitivefactory/interactive-clustering/discussions"

[tool.pdm]
includes = [
    "src/cognitivefactory"
]

[tool.pdm.dev-dependencies]
develop = [
    "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-2.3.0/fr_core_news_sm-2.3.0.tar.gz",  # "fr-core-news-sm==2.3.0",
    "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.0/en_core_web_sm-2.3.0.tar.gz",  # "en_core_web_sm==2.3.0",
]
duty = [
    "duty>=0.6",
]
docs = [
    "mkdocs>=1.2",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.1",
    "mkdocstrings>=0.17",
    "toml>=0.10",
]
format = [
    "autoflake>=1.4",
    "black>=20.8b1",
    "isort>=5.8",
]
maintain = [
    # TODO: remove this section when git-changelog is more powerful
    "git-changelog>=0.4",
]
quality = [
    "darglint>=1.7",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.3",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.4",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.4",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.2",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.11",
    "wps-light>=0.15",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=2.11",
    "pytest-randomly>=3.6",
    "pytest-sugar>=0.9",
    "pytest-xdist>=2.2",
    "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-2.3.0/fr_core_news_sm-2.3.0.tar.gz",  # "fr-core-news-sm==2.3.0",
    "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.0/en_core_web_sm-2.3.0.tar.gz",  # "en_core_web_sm==2.3.0",
]
typing = [
    "mypy>=0.812",
]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "cognitivefactory"
include_trailing_comma = true
