[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "cognitivefactory-interactive-clustering"
description = "Python package used to apply NLP interactive clustering methods."
authors = [
    {name = "Erwan Schild", email = "erwan.schild@e-i.com"}
]
license = {text = "CECILL-C"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "python",
    "natural-language-processing",
    "clustering",
    "constraints",
    "constrained-clustering-algorithm",
    "interactive-clustering",
]
dynamic = [
    "version",
    "classifiers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    #### "Programming Language :: Python :: 3.7",  # Not compatible with numpy<1.22
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    #### "Programming Language :: Python :: 3.10",  # Not compatible with networkx<=2.6, scikit-learn<=1.0
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # Functionnal dependencies.
    "networkx>=2.6",  # validation 12-2022: 2.6
    "numpy>=1.23.5",  # validation 12-2022: 1.23
    "scikit-learn>=0.24.1",  # validation 12-2022: 0.24, 1.0
    "scipy>=1.7.3",  # validation 12-2022: 1.5, 1.7
    "spacy>=3.4, <3.5",  # validation 12-2022: 3.1, 3.4
	
    # Technical dependencies.
	# None,

    # Safety dependencies.
    "setuptools>=65.5.1",  # TODO: Vulnerability https://pyup.io/v/52495/f17
]

[project.urls]
Homepage = "https://cognitivefactory.github.io/interactive-clustering"
Documentation = "https://cognitivefactory.github.io/interactive-clustering"
Changelog = "https://cognitivefactory.github.io/interactive-clustering/changelog"
Repository = "https://github.com/cognitivefactory/interactive-clustering"
Issues = "https://github.com/cognitivefactory/interactive-clustering/issues"
Discussions = "https://github.com/cognitivefactory/interactive-clustering/discussions"

[tool.pdm]
includes = [
    "src/cognitivefactory",
]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
develop = [
    "fr-core-news-md==3.4.0",  # @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.4.0/fr_core_news_md-3.4.0.tar.gz",
    "en-core-web-md==3.4.0",  # @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.4.0/en_core_web_md-3.4.0.tar.gz",
]
duty = [
    "duty>=0.7",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
quality = [
    # TODO: remove once importlib-metadata version conflict is resolved
    #### "importlib-metadata<5; python_version < '3.8'",
    #### "flake8>=4; python_version >= '3.8'",
    "flake8>=4.0",

    "darglint>=1.8",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",

    # Safety dependencies.
    "gitpython>=3.1.30",  # TODO: Vulnerability https://pyup.io/v/52322/f17/
]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",

    # Safety dependencies.
    "certifi>=2022.12.7",  # TODO: Vulnerability https://pyup.io/v/52365/f17/
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = [
    "safety>=2",

    # Safety dependencies.
    "certifi>=2022.12.7",  # TODO: Vulnerability https://pyup.io/v/52365/f17/
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
    "fr-core-news-md==3.4.0",  # @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.4.0/fr_core_news_md-3.4.0.tar.gz",
    "en-core-web-md==3.4.0",  # @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.4.0/en_core_web_md-3.4.0.tar.gz",
]
maintain = [
    "git-changelog>=0.4,<1.0",
]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "cognitivefactory"
include_trailing_comma = true
